--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.12.2",
+  "version": "1.12.3",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/Tracktor/design-system-tracktor#readme",
   "scripts": {
     "build": "tsc && vite build",
-    "lint": "eslint && tsc --noEmit",
+    "lint": "eslint . --max-warnings=0 && tsc --noEmit",
     "prepare": "yarn run build && husky install",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
