chore : scope @tracktor

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
             gh release create -F CHANGELOG.md $TAG
       - run:
           name: publish on npm
-          command: yarn publish
+          command: yarn publish --access public
 
 workflows:
   Unit Test:
