--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "design-system-tracktor",
+  "name": "@tracktor/design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.12.4",
+  "version": "1.12.5",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
