--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tracktor/design-system-tracktor",
   "description": "Tracktor Design System",
-  "version": "1.12.6",
+  "version": "1.13.0",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -64,7 +64,7 @@
     "@vitest/ui": "^0.27.0",
     "babel-loader": "^8.3.0",
     "chromatic": "^6.14.0",
-    "@tracktor/eslint-config-react-tracktor": "^1.0.6",
+    "eslint-config-react-tracktor": "^1.0.5",
     "husky": "^8.0.3",
     "jsdom": "^20.0.3",
     "react": "^18.2.0",
