--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tracktor/design-system-tracktor",
+  "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
   "version": "1.13.0",
   "license": "ISC",
