--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
-  "version": "1.17.0",
+  "version": "1.17.1",
   "license": "ISC",
   "type": "module",
   "types": "dist/main.d.ts",
@@ -9,7 +9,7 @@
   "module": "dist/main.js",
   "files": [
     "dist",
-    "*.d.ts"
+    "colors"
   ],
   "exports": {
     ".": {
