--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
-  "version": "1.37.2",
+  "version": "1.38.à",
   "license": "ISC",
   "type": "module",
   "types": "./dist/main.d.ts",
