--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.64.1",
     "storybook": "^7.1.1",
     "storybook-dark-mode": "^3.0.0",
