--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
+  "sideEffects": false,
   "version": "1.44.5",
   "license": "ISC",
   "type": "module",
