--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "type": "module",
   "types": "./dist/src/main.d.ts",
-  "main": "./dist/main.cjs",
+  "main": "./dist/main.js",
   "module": "./dist/main.js",
   "files": [
     "dist",
@@ -15,12 +15,12 @@
   "exports": {
     ".": {
       "import": "./dist/main.js",
-      "require": "./dist/main.cjs",
+      "require": "./dist/main.js",
       "types": "./dist/src/main.d.ts"
     },
     "./colors": {
       "import": "./dist/colors.js",
-      "require": "./dist/colors.cjs",
+      "require": "./dist/colors.js",
       "types": "./dist/colors/main.d.ts"
     }
   },
@@ -84,8 +84,8 @@
     "storybook": "^7.6.17",
     "storybook-dark-mode": "^3.0.1",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vite-plugin-dts": "^3.6.0",
+    "vite": "^5.1.4",
+    "vite-plugin-dts": "^3.7.3",
     "vitest": "^0.34.6"
   },
   "dependencies": {
