--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "license": "ISC",
   "type": "module",
   "types": "./dist/src/main.d.ts",
-  "main": "./dist/main.js",
+  "main": "./dist/main.cjs",
   "module": "./dist/main.js",
-  "engines": {
-    "node": ">=20 <21"
-  },
   "files": [
     "dist",
     "colors/index.d.ts"
@@ -18,12 +15,12 @@
   "exports": {
     ".": {
       "import": "./dist/main.js",
-      "require": "./dist/main.js",
+      "require": "./dist/main.cjs",
       "types": "./dist/src/main.d.ts"
     },
     "./colors": {
       "import": "./dist/colors.js",
-      "require": "./dist/colors.js",
+      "require": "./dist/colors.cjs",
       "types": "./dist/colors/main.d.ts"
     }
   },
@@ -52,19 +49,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-docs": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-actions": "^7.5.3",
+    "@storybook/addon-docs": "^7.5.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-storysource": "^7.6.17",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
+    "@storybook/addon-storysource": "^7.5.3",
+    "@storybook/addons": "^7.5.3",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.6.17",
+    "@storybook/theming": "^7.5.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -75,7 +72,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
-    "chromatic": "^11.0.0",
+    "chromatic": "^6.24.1",
     "eslint-config-react-tracktor": "^1.7.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
@@ -84,11 +81,11 @@
     "react-test-renderer": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "sass": "^1.67.0",
-    "storybook": "^7.6.17",
+    "storybook": "^7.5.3",
     "storybook-dark-mode": "^3.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vite-plugin-dts": "^3.7.3",
+    "vite-plugin-dts": "^3.6.0",
     "vitest": "^0.34.6"
   },
   "dependencies": {
