--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
   "sideEffects": false,
-  "version": "1.50.4",
+  "version": "1.50.5",
   "license": "ISC",
   "type": "module",
   "types": "./dist/src/main.d.ts",
@@ -89,9 +89,9 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.12"
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
