--- a/package.json
+++ b/package.json
@@ -49,19 +49,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-docs": "^7.5.3",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-storysource": "^7.5.3",
-    "@storybook/addons": "^7.5.3",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/react-vite": "^7.5.3",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-docs": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-onboarding": "^8.1.5",
+    "@storybook/addon-storysource": "^8.1.5",
+    "@storybook/blocks": "^8.1.5",
+    "@storybook/builder-vite": "^8.1.5",
+    "@storybook/manager-api": "^8.1.5",
+    "@storybook/preview-api": "^8.1.5",
+    "@storybook/react": "^8.1.5",
+    "@storybook/react-vite": "^8.1.5",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.5.3",
+    "@storybook/theming": "^8.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -69,7 +71,7 @@
     "@types/node": "^18.17.1",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react": "^4.3.0",
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.0.0",
@@ -79,13 +81,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
-    "remark-gfm": "^3.0.1",
     "sass": "^1.67.0",
-    "storybook": "^7.5.3",
-    "storybook-dark-mode": "^3.0.1",
+    "storybook": "^8.1.5",
+    "storybook-dark-mode": "^4.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-dts": "^3.9.1",
     "vitest": "^0.34.6"
   },
   "dependencies": {
