--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
   "sideEffects": false,
-  "version": "2.1.4",
+  "version": "2.2.0°",
   "license": "ISC",
   "type": "module",
   "types": "./dist/src/main.d.ts",
