--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@types/node": "^18.17.1",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
     "chromatic": "^11.0.0",
@@ -85,8 +85,8 @@
     "storybook": "^8.1.6",
     "storybook-dark-mode": "^4.0.1",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^3.9.1",
+    "vite": "5.4.9",
+    "vite-plugin-dts": "^4.2.4",
     "vitest": "^0.34.6"
   },
   "dependencies": {
