--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   "exports": {
     ".": {
       "import": "./dist/main.js",
-      "require": "./dist/main.cjs",
-      "types": "./dist/src/main.d.ts"
+      "require": "./dist/main.cjs"
     },
     "./colors": {
       "import": "./dist/colors.js",
-      "require": "./dist/colors.cjs",
-      "types": "./dist/colors/main.d.ts"
+      "require": "./dist/colors.cjs"
     }
   },
   "repository": {
@@ -49,21 +47,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@storybook/addon-actions": "^8.1.6",
-    "@storybook/addon-docs": "^8.1.6",
-    "@storybook/addon-essentials": "^8.1.6",
-    "@storybook/addon-interactions": "^8.1.6",
-    "@storybook/addon-links": "^8.1.6",
-    "@storybook/addon-onboarding": "^8.1.6",
-    "@storybook/addon-storysource": "^8.1.6",
-    "@storybook/blocks": "^8.1.6",
-    "@storybook/builder-vite": "^8.1.6",
-    "@storybook/manager-api": "^8.1.6",
-    "@storybook/preview-api": "^8.1.6",
-    "@storybook/react": "^8.1.6",
-    "@storybook/react-vite": "^8.1.6",
+    "@storybook/addon-actions": "^8.3.6",
+    "@storybook/addon-docs": "^8.3.6",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/addon-storysource": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/builder-vite": "^8.3.6",
+    "@storybook/manager-api": "^8.3.6",
+    "@storybook/preview-api": "^8.3.6",
+    "@storybook/react": "^8.3.6",
+    "@storybook/react-vite": "^8.3.6",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.1.6",
+    "@storybook/theming": "^8.3.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -82,7 +80,7 @@
     "react-dom": "^18.3.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.67.0",
-    "storybook": "^8.1.6",
+    "storybook": "^8.3.6",
     "storybook-dark-mode": "^4.0.1",
     "typescript": "^5.2.2",
     "vite": "5.4.9",
