--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tracktor/design-system",
   "description": "Tracktor Design System",
   "sideEffects": false,
-  "version": "3.4.4",
+  "version": "3.4.5",
   "license": "ISC",
   "type": "module",
   "types": "./dist/src/main.d.ts",
@@ -90,7 +90,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6"
+    "@mui/material": "~6.2.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
