--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.19.61",
-    "@types/react": "^18.3.12",
+    "@types/react": "^19.0.0",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/ui": "^0.34.4",
@@ -76,9 +76,9 @@
     "eslint-config-react-tracktor": "^1.8.1",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-test-renderer": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-test-renderer": "^19.0.0",
     "sass": "^1.80.5",
     "storybook": "^8.3.6",
     "storybook-dark-mode": "^4.0.1",
@@ -88,9 +88,9 @@
     "vitest": "^1.6.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "~7.2.0"
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^7.0.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
