--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
     "@storybook/addon-onboarding": "^9.0.15",
-    "@storybook/blocks": "^8.6.14",
+    "@storybook/blocks": "^9.0.0-alpha.17",
     "@storybook/builder-vite": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
     "@storybook/testing-library": "^0.2.2",
