--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "test-visual": "chromatic --project-token=c9bbc986d0d6 --exit-zero-on-changes"
   },
   "devDependencies": {
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "@babel/core": "^7.22.9",
     "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
@@ -58,9 +60,9 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@types/node": "^18.19.61",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
@@ -79,11 +81,18 @@
     "vitest": "^1.6.1"
   },
   "dependencies": {
+    "@tracktor/react-utils": "^1.24.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
+    "react-virtualized-auto-sizer": "^1.0.25",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^7.0.0"
   },
   "peerDependencies": {
+    "@tracktor/react-utils": "^>=1.24.0",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window-infinite-loader": ">=1.0.10",
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "@mui/material": ">=6.0.0",
