--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "@emotion/react": ">=11.0.0",
     "@emotion/styled": ">=11.0.0",
     "@mui/material": ">=6.0.0",
-    "@tracktor/react-utils": "^>=1.24.0",
+    "@tracktor/react-utils": ">=1.24.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-virtualized-auto-sizer": "^1.0.25",
