--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@tracktor/react-utils": ">=1.24.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-virtualized-auto-sizer": ">=1.0.25",
     "react-window-infinite-loader": ">=1.0.10"
   },
   "readme": "ERROR: No README data found!",
