--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "build": "tsc && vite build",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
-    "lint": "eslint . --max-warnings=0 && tsc --noEmit",
+    "lint": "biome check --diagnostic-level=error . && tsc --noEmit --incremental",
+    "lint:fix": "biome check . --write",
     "prepare": "yarn run build && husky install",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -57,6 +58,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@tracktor/biome-config-react": "^1.1.1",
     "@types/node": "^18.19.61",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
@@ -66,7 +68,6 @@
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
     "chromatic": "^13.3.0",
-    "eslint-config-react-tracktor": "^1.8.1",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "react": "^19.0.0",
