chore: switch project to Bun for package management and CI/CD

--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "build": "tsc && vite build",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
-    "lint": "biome check --diagnostic-level=error . && tsc --noEmit --incremental",
-    "lint:fix": "biome check . --write",
-    "prepare": "yarn run build && husky install",
-    "preview": "vite preview",
+    "lint": "bunx biome check --diagnostic-level=error . && tsc --noEmit --incremental",
+    "lint:fix": "bunx biome check . --write",
+    "prepare": "bunx run build && husky install",
+    "preview": "bunx vite preview",
     "storybook": "storybook dev -p 6006",
-    "test": "yarn lint && vitest",
+    "test": "bun lint && vitest",
     "test-ui": "vitest --ui",
     "test-visual": "chromatic --project-token=c9bbc986d0d6 --exit-zero-on-changes"
   },
