--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.15.1
+          cache: 'npm'
+
       - uses: oven-sh/setup-bun@v1
+
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: bun-${{ runner.os }}-${{ hashFiles('bun.lockb') }}
+          restore-keys: |
+            bun-${{ runner.os }}-
+
       - run: bun install
       - run: bun test
 
@@ -24,6 +41,9 @@ jobs:
     if: github.ref != 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.15.1
       - uses: oven-sh/setup-bun@v1
       - run: bun install
       - uses: chromaui/action@v1
@@ -38,17 +58,26 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.15.1
+      - uses: oven-sh/setup-bun@v1
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.CONTAINER_REGISTRY_USER }}
           password: ${{ secrets.CONTAINER_REGISTRY_PWD }}
-      - run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
+      - name: Extract version
+        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
       - uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: tracktor/design-system-storybook:${{ env.VERSION }}
+          tags: |
+            tracktor/design-system-storybook:${{ env.VERSION }}
+            tracktor/design-system-storybook:latest
 
   publish-npm:
     name: Publish package to npm
@@ -57,15 +86,22 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22.15.1
+          registry-url: 'https://registry.npmjs.org'
+
       - uses: oven-sh/setup-bun@v1
       - run: bun install
+
       - name: Create GitHub release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           TAG=$(jq -r .version package.json)
           gh release create "$TAG" -F CHANGELOG.md
+
       - name: Publish on npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: bunx npm publish --access public
+        run: npm publish --access public
