feat(ci): update test commands in CI configuration and package.json for Bun compatibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: 22.15.1
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bun test
+      - run: bun run test
 
   chromatic:
     name: Chromatic Deployment
