--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -30,6 +30,6 @@ jobs:
       - uses: bitovi/github-actions-storybook-to-github-pages@b75ece8f984a32b2adb322065d7a8a2cc8db2d52  # v1.0.3
         with:
           install_command: bun install
-          build_command: bun run build-storybook
+          build_command: bun build-storybook
           path: storybook-static
           checkout: false
