--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "build": "tsc && vite build",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
-    "lint": "bunx biome check --diagnostic-level=error . && tsc --noEmit --incremental",
-    "lint:fix": "bunx biome check . --write",
+    "lint": "bun x biome check --diagnostic-level=error . && tsc --noEmit --incremental",
+    "lint:fix": "bun x biome check . --write",
     "prepare": "bun run build && husky install",
-    "preview": "bunx vite preview",
+    "preview": "bun x vite preview",
     "storybook": "storybook dev -p 6006",
-    "test": "bun lint && vitest",
+    "test": "bun run lint && vitest",
     "test-ui": "vitest --ui",
     "test-visual": "chromatic --project-token=c9bbc986d0d6 --exit-zero-on-changes"
   },
