--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -20,15 +20,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020  # v4.2.0
+        uses: actions/setup-node@v4
         with:
           node-version: "24"
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76
+        uses: oven-sh/setup-bun@v1
         with:
           bun-version: "1.3.1"
 
@@ -42,10 +42,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bun-
 
-      - name: Build & Deploy Storybook
-        uses: bitovi/github-actions-storybook-to-github-pages@b75ece8f984a32b2adb322065d7a8a2cc8db2d52 # v1.0.3
+      - name: Install dependencies
+        run: bun install --ignore-scripts
+
+      - name: Build Storybook
+        run: bun run build-storybook
+
+      - name: Deploy to GitHub Pages
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
-          install_command: bun install
-          build_command: bun run build-storybook
           path: storybook-static
           checkout: false
