--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,19 +5,31 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write # required for gh release create
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-      packages: write
-
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Bun
         uses: oven-sh/setup-bun@v1
+
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --ignore-scripts
@@ -30,11 +42,15 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
           npm whoami
 
-      - name: Create GitHub Release
-        id: create_release
+      - name: Extract version from package.json
+        id: version
         run: |
-          TAG=$(jq -r .version package.json)
-          gh release create "$TAG" -F CHANGELOG.md
+          VERSION=$(jq -r .version package.json)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Release
+        run: |
+          gh release create "${{ steps.version.outputs.version }}" -F CHANGELOG.md
 
       - name: Publish to npm
         run: npm publish --access public
