--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,3 +88,55 @@ jobs:
       - name: Run Chromatic
         if: ${{ steps.changes.outputs.changed_files != '' }}
         run: bun run test-visual
+
+  storybook-deploy:
+    runs-on: ubuntu-latest
+    needs: chromatic
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Detect changed UI files
+        id: changes
+        run: |
+          git fetch origin master --depth=1
+          CHANGED=$(git diff --name-only origin/master...HEAD | grep -E '^src/|^packages/|\.stories\.|\.mdx$' || true)
+          echo "changed_files=$CHANGED" >> $GITHUB_OUTPUT
+
+      - name: Skip Storybook deploy (no UI change)
+        if: ${{ steps.changes.outputs.changed_files == '' }}
+        run: echo "No UI changes — skipping Storybook deploy."
+
+      - name: Install Bun
+        if: ${{ steps.changes.outputs.changed_files != '' }}
+        uses: oven-sh/setup-bun@v1
+
+      - name: Cache Bun dependencies
+        if: ${{ steps.changes.outputs.changed_files != '' }}
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        if: ${{ steps.changes.outputs.changed_files != '' }}
+        run: bun install --ignore-scripts
+
+      - name: Build Storybook
+        if: ${{ steps.changes.outputs.changed_files != '' }}
+        run: bun run build-storybook
+
+      - name: Deploy Storybook to GitHub Pages
+        if: ${{ steps.changes.outputs.changed_files != '' }}
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        with:
+          path: storybook-static
+          checkout: false
+          install_command: "echo 'skip install'"
+          build_command: "echo 'skip build'"
