--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 permissions:
-  contents: write # required for gh release create
+  contents: write
   packages: write
 
 jobs:
@@ -34,21 +34,13 @@ jobs:
       - name: Install dependencies
         run: bun install --ignore-scripts
 
-      - name: Run prepare script manually
-        run: bun run prepare
+      - name: Build package
+        run: bun run build
 
       - name: Configure npm auth
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
           npm whoami
-
-      - name: Configure GitHub CLI Auth
-        run: |
-          gh auth setup-git
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract version from package.json
         id: version
@@ -64,7 +56,7 @@ jobs:
             gh release create "${{ steps.version.outputs.version }}" -F CHANGELOG.md
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to npm
         run: npm publish --access public --provenance
