--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -39,31 +39,33 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
 
-      # 🏗️ Build Storybook (except when closing PR)
+      # --- Build Storybook unless closing PR ---
       - name: Build Storybook
         if: github.event.action != 'closed'
         run: bun run build-storybook
 
+      # --- Determine deployment target folder ---
       - name: Set deploy path
-        id: paths
+        id: path
         run: |
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+          if [[ "${{ github.event_name }}" == "pull_request" && "${{ github.event.action }}" != "closed" ]]; then
             echo "folder=pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
           else
             echo "folder=." >> $GITHUB_OUTPUT
           fi
 
-      # 🚀 Deploy (master OR PR build)
+      # --- Publish (master or PR) ---
       - name: Deploy Storybook
         if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: storybook-static
-          destination_dir: ${{ steps.paths.outputs.folder }}
+          destination_dir: ${{ steps.path.outputs.folder }}
           keep_files: true
+          cname: storybook.tracktor.fr
 
-      # 🧹 Delete Preview on PR Close
+      # --- Auto-remove PR Preview on PR Close ---
       - name: Delete PR preview
         if: github.event_name == 'pull_request' && github.event.action == 'closed'
         run: |
@@ -76,10 +78,10 @@ jobs:
           rm -rf pr-${{ github.event.pull_request.number }}
 
           git add .
-          git commit -m "Delete PR preview pr-${{ github.event.pull_request.number }}" || echo "Nothing to commit"
+          git commit -m "Cleanup preview for PR #${{ github.event.pull_request.number }}" || echo "Nothing to commit"
           git push
 
-      # 💬 Comment PR with Preview URL
+      # --- Comment on PR with Preview URL ---
       - name: Comment PR with Storybook URL
         if: github.event_name == 'pull_request' && github.event.action != 'closed'
         uses: marocchino/sticky-pull-request-comment@v2
@@ -88,4 +90,7 @@ jobs:
           header: storybook_preview
           message: |
             🚀 **Storybook Preview Ready**
+
             🔗 https://storybook.tracktor.fr/pr-${{ github.event.pull_request.number }}/
+
+            _(This link updates automatically on each commit)_
