--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -95,8 +95,8 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
 
-      - name: Build Storybook
-        run: bun run build-storybook
+      - name: Build Storybook (PR Preview)
+        run: bun run build-storybook-preview
 
       - name: Deploy Preview to /pr-xxx/
         uses: peaceiris/actions-gh-pages@v4
