--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -49,9 +49,7 @@ jobs:
         run: bun run build-storybook
 
       - name: Deploy to GitHub Pages
-        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: storybook-static
-          checkout: false
-          install_command: ""
-          build_command: ""
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./storybook-static
