chore: remove 'test' branch from GitHub Pages deployment action in deploy-storybook.yml

--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - test
 
 permissions:
   contents: write
@@ -16,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     environment:
-      name: ${{ github.ref_name == 'master' && 'Storybook' || 'Storybook-Test' }}
+      name: Storybook
       url: https://storybook.tracktor.fr
 
     steps:
