--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - master
-      - test/storybook
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
