fix: implement virtualized Kanban columns with dynamic loading and improved performance

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^7.0.0",
+    "@tanstack/react-virtual": "^3.13.13",
     "@tracktor/react-utils": "^1.24.0",
     "react-virtualized-auto-sizer": "^1.0.25",
     "react-window": "^1.8.11",
