--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "@types/react-window": "^1.8.8",
-    "@types/react-window-infinite-loader": "^1.0.9",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/ui": "^0.34.4",
     "babel-loader": "^9.1.3",
@@ -85,10 +84,7 @@
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^7.0.0",
     "@tanstack/react-virtual": "^3.13.13",
-    "@tracktor/react-utils": "^1.24.0",
-    "react-virtualized-auto-sizer": "^1.0.25",
-    "react-window": "^1.8.11",
-    "react-window-infinite-loader": "^1.0.10"
+    "@tracktor/react-utils": "^1.24.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11.0.0",
@@ -96,9 +92,7 @@
     "@mui/material": ">=6.0.0",
     "@tracktor/react-utils": ">=1.24.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-virtualized-auto-sizer": ">=1.0.25",
-    "react-window-infinite-loader": ">=1.0.10"
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "readme": "ERROR: No README data found!",
   "resolutions": {
