--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@emotion/styled": ">=11.0.0",
     "@mui/material": ">=6.0.0",
     "@tracktor/react-utils": ">=1.24.0",
+    "@tanstack/react-virtual": ">=3.0.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
